# virtual-domain-manager

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VERSION  config.json  domain-manager.py  domain-switch-learning.txt  domain-switch-qt.pro  domainOperator.cpp  domainOperator.h  exclude.rsync  install.sh  main.cpp  manager-plugin.py  manager.py  opsBase.h  opsCollection.cpp  opsCollection.h  opsUtility.cpp  opsUtility.h  package.json  setup.py
Utility/: Math.py  Utility.py
assets/: pyvdm-gui.conf
capability/inotify-watcher/: README.md
capability/note-film/: README.md
capability/system-tweaker/: README.md
capability/web-browser-watcher/: README.md
capability/window-watcher/: README.md
core/daemon/: Cargo.toml
core/pyvdm/: ApplicationManager.py  CapabilityManager.py  DomainManager.py  PluginManager.py  __init__.py  errcode.py  manager-plugin.py  manager.py  plugin_manager.py  sync_manager.py  utils.py
core/pyvdm/helper/: IpcHelper.py  LogHelper.py  MathHelper.py  ThreadHelper.py
daemon/: Cargo.toml
daemon/capability-daemon/: Cargo.toml
daemon/capability-daemon/src/: consts.rs  lib.rs  main.rs  shmem.rs
daemon/serde-ipc/: Cargo.toml
daemon/serde-ipc/src/: ffi.rs  ipc.rs  jsonify_ipc.rs  lib.rs
daemon/serde-ipc/src/core/: command.rs  ffi.rs  ipc.rs  mod.rs  service.rs  traits.rs
daemon/serde-ipc/src/protocol/: mod.rs  shmem.rs
daemon/src/: ffi.rs  ipc.rs  lib.rs  main.rs  shared_consts.rs
gui/pyvdm/: ControlPanel.py  TransitionSceneWidget.py  TraversalWidget.py  manager.py  tray.py  utils.py  vdm-daemon.py
gui/pyvdm/qml/: BasicElem.qml  ChildList.qml  PredElem.qml  main.qml
helper/: ConfigHelper.py  DomainHelper.py  ImportHelper.py  LogHelper.py  MathHelper.py  PathHelper.py  PrintHelper.py  ThreadHelper.py  WindowHelper.py  __init__.py
interface/: CapabilityLibrary.py  RPCWrapper.py  __init__.py  ars_api.h  ars_api.py  org.vdm-compatible.src.xml  org.vdm-compatible.xml  src_api.h  src_api.py
manager/: PluginHelper.py  PluginProxy.py  __init__.py  manager.py  plugin-manager.py  sync-manager.py
plugin-template/: README.md
plugin-template/python/: README.md  package.json  plugin-entry.py
plugin/dBrowser/: __init__.py
plugin/dBrowser/chrome/: __init__.py
plugin/dEditor/: __init__.py
plugin/dSystem/: __init__.py
plugins/: __init__.py
plugins/dBrowser/: __init__.py
plugins/dBrowser/chrome-dev/: package.json
plugins/dEditor/sublime-dev/: package.json
plugins/dEditor/vscode-dev/: package.json
plugins/dSystem/: __init__.py
plugins/dSystem/wallpaper-dev/: package.json
plugins/template/python/: plugin-entry.py
script/: clean.sh  compile.sh  dependency.sh  domain-manager-completion.bash  install.sh  uninstall.sh
src/: plugin-register.py
utility/: Math.py  Utility.py  __init__.py
wrapper/: __init__.py  dbus-wrapper.py  wnck-wrapper.py
