[package]
name = "vdm-daemon"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

[lib]
name = "vdm_daemon"
crate-type = ["cdylib"]

[dependencies]
shared_memory = "0.11.4"
libc = "0.2"
errno = "0.2"
tokio = { version = "1.5.0", features = ["full"] }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
