[package]
name = "vdm-daemon"
version = "0.1.0" #override by `CARGO_PKG_VERSION`
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

[lib]
name = "vdm_daemon"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
bimap = "0.6"
nix = "0.10"
libc = "0.2"
shared_memory = "0.11.4"
num_cpus = "1.0"
threadpool = "1.0"
serde_json = "1.0"
num_enum = "0.5.1"
libloading = "0.7"
shellexpand = "1.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "auto-initialize"]

[dependencies.tokio]
version = "1.5.0"
features = ["full"]
