[package]
name = "vdm-capability-daemon"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

[lib]
name = "vdm_capability_daemon"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
shellexpand = "1.0"
num_enum = "0.5.1"
shared_memory = "0.11.4"
serde_json = "1.0"

[dependencies.serde-ipc]
path = "../serde-ipc"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]