[package]
name = "serde-ipc"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

[lib]
name = "serde_ipc"

[dependencies]
rand = "0.8"
bimap = "0.6"
nix = "0.10"
libc = "0.2"
num_cpus = "1.0"
threadpool = "1.0"
serde_json = "1.0"
libloading = "0.7"
shellexpand = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "auto-initialize"]

[dependencies.tokio]
version = "1.5.0"
features = ["full"]